--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 ---
-layout: page 
-title: Home
+layout: default 
 ---
 
-    <h1>This is Home Page</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3 box">
+            <div id="tree"></div>
+        </div>
+        <div class="col-md-9 box">
+            <div class="col-md-4 box">
+
+            </div>
+            <div class="col-md-4 box">
+
+            </div>
+            <div class="col-md-4 box">
+
+            </div>
+        </div>
+    </div>
+</div>
